# ads-varietor

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.web  EXAMPLES.md  INSTALLATION.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  test_system.py  video_variations_from_config.py  video_variations_system.py
docs/: ARCHITECTURE.md  OPERACAO.md  QUICKSTART.md  README_PRIMEIRO.md  config_example.json
docs/adr/: 001-estrutura-do-projeto.md  002-api-rest-com-polling.md  003-sqlite-como-fonte-de-verdade.md  004-execucao-do-ffmpeg.md  005-seguranca-da-api-publica.md  006-stack-do-frontend.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  errors.test.ts  errors.ts  jobs.ts  types.ts
frontend/src/components/: Alerta.tsx  AreaDeUpload.tsx  BarraDeProgresso.tsx  Botao.tsx  Cabecalho.tsx  CartaoDeVariacao.tsx  DialogoDeConfirmacao.tsx  Icone.tsx  IdentificacaoDoArquivo.tsx  LimiteDeErro.tsx  PainelDeVariacoes.tsx  ResumoDoProgresso.tsx  SeletorDeEfeitos.tsx  SeletorDeModo.tsx  SeloDeStatus.tsx  TelaDeCarregamento.tsx  TelaDeEnvio.tsx  TelaDeProgresso.tsx  TelaDeResultados.tsx  TiraDeVariacoes.tsx  VerificacaoDeHashes.tsx
src/ads_varietor/: settings.py
src/video_variations/: __init__.py  settings.py
tests/integration/: test_api_fluxo.py  test_api_limites.py  test_api_seguranca.py  test_api_uso_e_quota.py  test_infra_ciclo_de_vida.py  test_interface_e_modo_publico.py  test_render_e_runner.py
tests/unit/: test_batch.py  test_ffmpeg.py  test_generator_e_models.py  test_metadata.py  test_observability.py  test_repository.py  test_storage.py
(+62 files in other folders)
