[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ads-varietor"
version = "1.0.0"
description = "Gera múltiplas variações de um vídeo com parâmetros que variam automaticamente"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.38",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "httpx>=0.28",
]

[project.scripts]
ads-varietor = "ads_varietor.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ads_varietor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]
